name:                Second
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/Povilas1/TicTacToe_Http
author:              Povilas Arlauskas
maintainer:          Povilas.arl@gmail.com
copyright:           PovilasArlauskas
category:            Web

Build-Type:        Simple
cabal-version:     >= 1.2

executable Second
  main-is:         second.hs
  build-depends:       base
                     , http-client
                     , http-types
                     , io-streams
                     , bytestring
                     , AttoBencode
                     , parsec
  default-language:    Haskell2010